matrix page complete

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="col-3">
           <a href="movies/matrix.html">
-            <img class="my-3 img-fluid" src="coverart/matrix.jpg" alt="1917">
+            <img class="my-3 img-fluid" src="coverart/matrix.jpg" alt="matrix">
           </a>
       </div>
     </div>
