--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="login.html">Login</a>
           </li>
         </ul>
-        <form class="navbar-form form-inline">
+        <form class="navbar-form">
           <div class="form-group mr-3">
             <input type="text" class="form-control" placeholder="Search">
           </div>
